<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height = "match_parent">


    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/username"
        android:id = "@+id/text_profile"
        android:layout_centerHorizontal = "true"
        android:textColor = "#ff7aff24"
        android:textSize = "16dp"
        android:layout_marginTop = "30dp" />

    <TextView
        android:id="@+id/newPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/password"
        android:textColor="#ff7aff24"
        android:textSize="16dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newPasswordField"
        android:layout_below="@+id/newPasswordText"
        android:layout_centerHorizontal = "true"
        android:textColorHint="#ffff299f"
        android:hint="Password" />

    <TextView
        android:id="@+id/confirmPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/confirm_password"
        android:textColor="#ff7aff24"
        android:textSize="16dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordField"
        android:layout_below="@+id/confirmPasswordText"
        android:layout_centerHorizontal = "true"
        android:textColorHint="#ffff299f"
        android:hint="Retype Password" />


    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/update_password" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updatePasswordButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/cancel" />


</RelativeLayout>